--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,18 @@ footer, #most_popular
         position: relative;
         left: 17px;      
     }
+    ::-webkit-input-placeholder
+    {
+        color: black;
+        position: relative;
+        left: 17px;
+    }
+    ::-moz-placeholder
+    {
+        color: black;
+        position: relative;
+        left: 17px;
+    }
     button
     {
         display: flex;
@@ -896,6 +908,18 @@ footer, #most_popular
         color: black;
         position: relative;
         left: 17px;        
+    }
+    ::-webkit-input-placeholder
+    {
+        color: black;
+        position: relative;
+        left: 17px;
+    }
+    ::-moz-placeholder
+    {
+        color: black;
+        position: relative;
+        left: 17px;
     }
     button
     {
